--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -31,11 +31,14 @@
         font-weight 600
         text-shadow 0 0 0 #fff
         letter-spacing .15em
+        color $green
 
     .page-loader
-        height 14px
-        width 14px
-        border-width 1px
+        height 13px
+        width 13px
+        border-width 2px
+        border-top-color $blue
+        border-right-color $blue
 
 .tail-contents
     overflow scroll
