--- a/SingularityUI/app/views/templates/requestHeader.hbs
+++ b/SingularityUI/app/views/templates/requestHeader.hbs
@@ -1,34 +1,84 @@
-<h1 data-string-length-tens="{{ requestNameStringLengthTens }}">
-    {{#hardBreak request.name}}{{/hardBreak}}
+{{! Part of requestBase }}
+<header class="jumbotron subhead" id="overview">
+    <div class="row">
+        {{! Left side, info }}
+        <div class="span8">
+            <h1>{{ request.id }}</h1>
+            <p class="lead">
+                <span class="request-state {{ request.state }}">{{ request.displayState }}</span>
 
-    <div class="header-actions">
-        {{#if request.fullObject}}
-            <a data-request-id="{{ request.id }}" data-action="viewObjectJSON">JSON</a>
-        {{/if}}
-        {{#if request.scheduledOrOnDemand}}
-            {{#unless request.deleted}}
-                <a data-request-id="{{ request.id }}" data-request-type="{{#if request.onDemand}}on-demand{{else}}scheduled{{/if}}" data-action="run-request-now">Run now</a>
-            {{/unless}}
-        {{/if}}
-        {{#if request.fullObject}}
+                {{! When we get the request history we'll also render this to display the status }}
+                <span class="request-status">
+                    {{#if firstRequestHistoryItem}}
+                        {{ firstRequestHistoryItem.stateHuman }}
+                        {{#if firstRequestHistoryItem.userHuman}}
+                            by {{ firstRequestHistoryItem.userHuman }}
+                        {{/if}}
+                        {{ firstRequestHistoryItem.createdAtHuman }}
+                    {{/if}}
+                </span>
+            </p>
+        </div>
+
+        {{! Right side, buttons }}
+        <div class="span4 button-container">
+            <a class="btn btn-default" data-request-id="{{ request.id }}" data-action="viewObjectJSON">
+                JSON
+            </a>
+
+            {{#if request.canBeRunNow}}
+                {{#unless request.deleted}}
+                    <a class="btn btn-primary" data-request-id="{{ request.id }}" data-request-type="{{#if request.onDemand}}on-demand{{else}}scheduled{{/if}}" data-action="run-request-now">
+                        Run now
+                    </a>
+                {{/unless}}
+            {{/if}}
+
             {{#unless request.deleted}}
                 {{#if request.paused}}
-                    <a data-request-id="{{ request.id }}" data-action="unpause">Unpause</a>
+                    <a class="btn btn-primary" data-request-id="{{ request.id }}" data-action="unpause">
+                        Unpause
+                    </a>
                 {{else}}
-                    <a data-request-id="{{ request.id }}" data-action="pause">Pause</a>
+                    <a class="btn btn-primary" data-request-id="{{ request.id }}" data-action="pause">
+                        Pause
+                    </a>
                 {{/if}}
             {{/unless}}
-        {{/if}}
-        
-        {{#if request.canBeBounced}}
-            <a data-request-id="{{ request.id }}" data-action="bounce">Bounce</a>
-        {{/if}}
-        
-        {{#unless request.deleted}}
-            <a data-request-id="{{ request.id }}" data-action="remove">Remove</a>
-        {{/unless}}
+            
+            {{#if request.canBeBounced}}
+                <a class="btn btn-primary" data-request-id="{{ request.id }}" data-action="bounce">
+                    Bounce
+                </a>
+            {{/if}}
+            
+            {{#unless request.deleted}}
+                <a class="btn btn-danger" data-request-id="{{ request.id }}" data-action="remove">
+                    Remove
+                </a>
+            {{/unless}}
+        </div>
     </div>
-</h1>
-{{#if firstRequestHistoryItem}}
-    <p class="lead"><span class="request-state {{ request.state }}">{{ request.displayState }}</span>{{ firstRequestHistoryItem.stateHuman }} {{#if firstRequestHistoryItem.userHuman}}by {{ firstRequestHistoryItem.userHuman }}{{/if}} {{ firstRequestHistoryItem.createdAtHuman }}</p>
-{{/if}}
+
+    {{! Active deploy well }}
+    <div class="well">
+        {{#if request.activeDeploy}}
+            {{#with request.activeDeploy}}
+                Active deploy <code>{{ id }}</code>
+                {{#if metadata.deployedBy}}
+                    by {{ metadata.deployedBy }}
+                {{/if}}
+                {{#if timestampHuman}}
+                    &mdash;
+                    {{ timestampHuman }}
+                {{/if}}
+            {{/with}}
+        {{else}}
+                No active deploy
+        {{/if}}
+        
+        <a data-action="expand-deploy-history" class="pull-right">
+            Deploy history
+        </a>
+    </div>
+</header>
