--- a/SingularityUI/app/views/templates/requestHistoricalTasks.hbs
+++ b/SingularityUI/app/views/templates/requestHistoricalTasks.hbs
@@ -1,17 +1,46 @@
-<header class="jumbotron subhead" id="overview" data-request-header>
-    <h3><a href="{{#appRoot}}{{/appRoot}}/request/{{ request.id }}">Back to request</a></h3>
-    <h1 data-string-length-tens="{{ requestNameStringLengthTens }}">
-        {{#hardBreak request.name}}{{/hardBreak}}
-    </h1>
-</header>
-
-<section>
-    <div class="page-header">
-        <h1>Historical tasks</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            <div class="historical-tasks-paginated"></div>
+<div class="page-header">
+    <h1>Historical tasks</h1>
+</div>
+{{#if data.length}}
+    <table class="table" data-sortable>
+        <thead>
+            <tr>
+                <th class="">Name</th>
+                <th class="visible-desktop">Status</th>
+                <th class="visible-desktop">Deploy ID</th>
+                <th class="visible-desktop">Started</th>
+                <th class="hidden-phone">Updated</th>
+                <th class="hidden-phone"></th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each data}}
+                <tr>
+                    <td class="">
+                        <span title="{{ id }}">
+                            <a href="{{#appRoot}}{{/appRoot}}/task/{{ id }}">
+                                {{ name }}
+                            </a>
+                        </span>
+                    </td>
+                    <td class="visible-desktop">{{ lastTaskStateHuman }}</td>
+                    <td class="visible-desktop">{{ deployId }}</td>
+                    <td class="visible-desktop">{{ startedAtHuman }}</td>
+                    <td class="hidden-phone">{{ updatedAtHuman }}</td>
+                    <td class="hidden-phone actions-column">
+                        <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
+                        <a href="{{#appRoot}}{{/appRoot}}/task/{{ id }}/files/">Files</a>
+                    </td>
+                </tr>
+            {{/each}}
+        </tbody>
+    </table>
+{{else}}
+    {{#if synced}}
+        <div class="empty-table-message">
+            No historical tasks
         </div>
-    </div>
-</section>
+    {{else}}
+        <div class="page-loader centered cushy"></div>
+    {{/if}}
+{{/if}}
