Cleanups and fixes

--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -11,6 +11,9 @@
         td
             padding 10px
     
+    tr.flash td
+        background rgba(0, 200, 20, .15) !important
+
     th, td
 
         // Regular links
