--- a/SingularityUI/app/templates/tasksTable/tasksCleaningBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksCleaningBody.hbs
@@ -9,7 +9,7 @@
                     <th data-sort-attribute="cleanupTypeHuman">
                         Cleanup type
                     </th>
-                    <th>
+                    <th class="hidden-xs">
                         {{! Actions column }}
                     </th>
                 </tr>
@@ -27,7 +27,7 @@
                     <td>
                         {{ cleanupTypeHuman }}
                     </td>
-                    <td class="actions-column">
+                    <td class="actions-column hidden-xs">
                         <a data-task-id="{{ id }}" data-action="viewJSON">
                             <span class="glyphicon glyphicon-th-list" title="JSON"></span>
                         </a>
