--- a/SingularityUI/app/templates/slaves.hbs
+++ b/SingularityUI/app/templates/slaves.hbs
@@ -14,7 +14,7 @@
                         <th>ID</th>
                         <th>Rack</th>
                         <th>Host</th>
-                        <th>Uptime</th>
+                        <th class="hidden-xs">Uptime</th>
                         <th data-sortable="false"></th>
                     </tr>
                 </thead>
@@ -26,7 +26,7 @@
                             </td>
                             <td>{{ rackId }}</td>
                             <td>{{ host }}</td>
-                            <td data-value="{{ uptime }}">{{ uptimeHuman }}</td>
+                            <td class="hidden-xs" data-value="{{ uptime }}">{{ uptimeHuman }}</td>
                             <td class="actions-column">
                                 <a data-slave-id="{{ id }}" data-action="decommission">
                                     <span class="glyphicon glyphicon-remove" title="Decommission"></span>
@@ -56,8 +56,8 @@
                         <th>ID</th>
                         <th>Rack</th>
                         <th>Host</th>
-                        <th>Died</th>
-                        <th>Uptime</th>
+                        <th class="hidden-xs">Died</th>
+                        <th class="hidden-xs">Uptime</th>
                         <th data-sortable="false"></th>
                     </tr>
                 </thead>
@@ -67,8 +67,8 @@
                             <td>{{ id }}</td>
                             <td>{{ rackId }}</td>
                             <td>{{ host }}</td>
-                            <td data-value="{{ deadAt }}">{{ deadAtHuman }}</td>
-                            <td data-value="{{ uptime }}">{{ uptimeHuman }}</td>
+                            <td class="hidden-xs" data-value="{{ deadAt }}">{{ deadAtHuman }}</td>
+                            <td class="hidden-xs" data-value="{{ uptime }}">{{ uptimeHuman }}</td>
                             <td class="actions-column">
                                 <a data-slave-id="{{ id }}" data-action="remove" data-state="{{ state }}">
                                      <span class="glyphicon glyphicon-trash" title="Remove"></span>
