--- a/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
@@ -15,10 +15,10 @@
                     <th data-sort-attribute="rack" class="hidden-xs">
                         Rack
                     </th>
-                    <th data-sort-attribute="cpus" class="visible-large-desktop">
+                    <th data-sort-attribute="cpus" class="visible-lg">
                         CPUs
                     </th>
-                    <th data-sort-attribute="memoryMb" class="visible-large-desktop">
+                    <th data-sort-attribute="memoryMb" class="visible-lg">
                         Memory
                     </th>
                     <th class="hidden-xs">
@@ -44,10 +44,10 @@
                     <td class="hidden-xs">
                         {{ host }}
                     </td>
-                    <td class="visible-large-desktop">
+                    <td class="visible-lg">
                         {{ rack }}
                     </td>
-                    <td class="visible-large-desktop">
+                    <td class="visible-lg">
                         {{ resources.cpus }}
                     </td>
                     <td class="hidden-xs" data-value="{{ resources.memoryMb }}">
