--- a/SingularityUI/app/templates/dashboard.hbs
+++ b/SingularityUI/app/templates/dashboard.hbs
@@ -86,7 +86,7 @@
                         {{#each starredRequests}}
                             <tr data-request-id="{{ id }}">
                                 <td>
-                                    <a class="star" data-request-id="{{ id }}" data-request-name="{{ name }}" data-action="unstar" data-starred="true">
+                                    <a class="star" data-action="unstar" data-starred="true">
                                         <span class="glyphicon glyphicon-star"></span>
                                     </a>
                                 </td>
