--- a/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
@@ -42,7 +42,7 @@
                 {{#each requests}}
                     <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
                         <td>
-                            <a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">
+                            <a class="star" data-action="starToggle" data-starred="{{ starred }}">
                                 <span class="glyphicon glyphicon-star"></span>
                             </a>
                         </td>
