--- a/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
@@ -32,7 +32,7 @@
             {{#eachWithFn tasks}}
                 <tr data-task-id="{{ id }}" data-task-host="{{ host }}">
                     <td>
-                        <a class="ellipsize-300" title="{{ id }}" href="{{appRoot}}/task/{{ id }}">
+                        <a title="{{ id }}" href="{{appRoot}}/task/{{ id }}">
                             {{ name }}
                         </a>
                     </td>
