TaskDetail & NotFound done

--- a/SingularityUI/app/templates/taskDetail/taskBase.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskBase.hbs
@@ -1,31 +1,30 @@
-<div class='task-detail detail-view'>
-    <div class="task-overview-container">
-        {{! Overwritten by renderOverview }}
+<div class='task-detail detail-view row'>
+    <div id="overview" class='col-md-12'>
+        {{! Overwritten by subview }}
         <div class="page-loader centered cushy"></div>
     </div>
 
-    <div class="task-history-container">
+    <div id="history" class='col-md-12'>
         
     </div>
 
-    <div class="task-file-browser-container">
-        {{! Filled in by subview }}
-    </div>
-
-    <div class='task-s3-logs-container'>
-        {{! Filled in by subview }}
-    </div>
-
-
-    <div class='task-info-container'>
+    <div id="file-browser" class='col-md-12'>
         
     </div>
 
-    <div class='task-resource-container'>
+    <div id='s3-logs' class='col-md-12'>
         
     </div>
 
-    <div class='task-environment-container'>
+    <div id='info' class='col-md-12'>
+        
+    </div>
+
+    <div id='resources' class='col-md-12'>
+        
+    </div>
+
+    <div id='environment' class='col-md-12'>
         
     </div>
 </div>
