--- a/SingularityUI/app/templates/taskDetail/taskInfo.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskInfo.hbs
@@ -4,51 +4,51 @@
 
 <div class="row">
     <ul class="list-unstyled horizontal-description-list">
-        {{#if taskHistory.task.name }}
+        {{#if data.task.name }}
             <li class="col-md-4">
                 <div>
                     <h4>Task Name</h4>
-                    <p>{{ taskHistory.task.name }}</p>
+                    <p>{{ data.task.name }}</p>
                 </div>
             </li>
             {{/if}}
-            {{#if taskHistory.task.mesosTask.executor.executorId.value }}
+            {{#if data.task.mesosTask.executor.executorId.value }}
             <li class="col-md-4">
                 <div>
                     <h4>Directory</h4>
-                    <p>{{ taskHistory.directory }}</p>
+                    <p>{{ data.directory }}</p>
                 </div>
             </li>
         {{/if}}
-        {{#if taskHistory.task.id }}
+        {{#if data.task.id }}
             <li class="col-md-4">
                 <div>
                     <h4>Task ID</h4>
-                    <p>{{ taskHistory.task.id }}</p>
+                    <p>{{ data.task.id }}</p>
                 </div>
             </li>
         {{/if}}
-        {{#if taskHistory.task.mesosTask.executor.executorId.value }}
+        {{#if data.task.mesosTask.executor.executorId.value }}
             <li class="col-md-4">
                 <div>
                     <h4>Executor GUID</h4>
-                    <p>{{ taskHistory.task.mesosTask.executor.executorId.value }}</p>
+                    <p>{{ data.task.mesosTask.executor.executorId.value }}</p>
                 </div>
             </li>
         {{/if}}
-        {{#if taskHistory.task.offer.hostname }}
+        {{#if data.task.offer.hostname }}
             <li class="col-md-4">
                 <div>
                     <h4>Hostname</h4>
-                    <p>{{ taskHistory.task.offer.hostname }}</p>
+                    <p>{{ data.task.offer.hostname }}</p>
                 </div>
             </li>
         {{/if}}
-        {{#if taskHistory.task.taskRequest.request.executorData.ports }}
+        {{#if data.task.taskRequest.request.executorData.ports }}
             <li class="col-md-4">
                 <div>
                     <h4>Task request ports</h4>
-                    <p>{{ taskHistory.task.taskRequest.request.executorData.ports }}</p>
+                    <p>{{ data.task.taskRequest.request.executorData.ports }}</p>
                 </div>
             </li>
         {{/if}}
